--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -176,3 +176,10 @@ input[type='text']{
   top: 10px;
   z-index: 10;
 }
+// reboard
+.board{
+  background-color: #f0f0f0;
+}
+.column{
+  background-color: #EDE8E4;
+}
