--- a/app/views/projects/board.html.erb
+++ b/app/views/projects/board.html.erb
@@ -1,98 +1,13 @@
-<header class="h-[6.188rem] flex px-6 items-center justify-between border-b border-gray-200">
-  <h1 class="text-2xl bold"><%= @project.title %></h1>
-  <div class="flex items-center">
-    <%= render "shared/header",project: @project %>
+<main class="flex w-full board" data-controller="board">
+  <section data-controller="column m-4 p-4 max-w-80">
+  <div class="flex justify-between"><h3>待辦事項</h3></div>
+  <div class="ticket-list">
+    <button>新增任務</button>
+    <div class="p-2 border rounded-md ticket" data-controller="task">
+      <div class="p-2">任務名稱</div>
+      <div class="p-2">優先度</div>
+      <div class="p-2">指派人＆日期 </div>
+    </div>
   </div>
-</header>
-<div class="h-screen">
-  <section data-controller="board" data-project-id="<%= @project.id %>" class="relative flex h-full px-4 py-4 overflow-x-auto gap-x-4 board-list bg-gray-50 ">
-    <% @columns.each do |column| %>
-      <div class="flex flex-col flex-wrap m-4 cloumn_item" data-controller="task" data-column-id="<%= column.id %>">
-        <div class="relative flex items-center justify-between p-2 mb-2 w-96">
-          <p class="text-xl font-semibold text-center column_status">
-            <%= column.status %>
-          </p>
-          <%= form_with model: @new_column ,url: column_path(column), method: "patch" do |form| %> 
-          <%= form.text_field :status, :class=>"display column_update text-xl text-center", placeholder: "輸入修改任務區塊名稱" %>
-          <% end %>
-          <div class="relative flex group">
-            <button class="flex items-center justify-center rounded w-7 h-7 text-icon hover:bg-hover" data-action="click->task#display_change">
-              <svg class="fill-current" height="20" focusable="false" viewBox="0 0 32 32">
-                <path d="M26,14h-8V6c0-1.1-0.9-2-2-2l0,0c-1.1,0-2,0.9-2,2v8H6c-1.1,0-2,0.9-2,2l0,0c0,1.1,0.9,2,2,2h8v8c0,1.1,0.9,2,2,2l0,0c1.1,0,2-0.9,2-2v-8h8c1.1,0,2-0.9,2-2l0,0C28,14.9,27.1,14,26,14z"/>
-              </svg>
-            </button>
-            <button data-action="click->board#column_display" class="flex items-center justify-center rounded w-7 h-7 text-icon hover:bg-hover group-focus-within:bg-hover">
-              <svg class="fill-current" height="20" focusable="false" viewBox="0 0 32 32">
-                <path d="M16,13c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S14.3,13,16,13z M3,13c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S1.3,13,3,13z M29,13c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S27.3,13,29,13z"/>
-              </svg>
-            </button>
-            <div class="absolute right-0 z-10 pb-2 bg-white border-2 rounded resize-none w-96 display task_form top-10" data-task-target="task_display">
-              <%= render "TaskForm", model: [@project,@new_task],user: @user, url: create_task_column_path(column)%>
-            </div>
-          </div>
-          <div class="bottom-0 right-0 flex flex-col transition-all bg-white border rounded column_display">
-            <div class="flex border-b">
-              <img class="inline w-10 p-2" alt="Lax" src="https://cdn-icons-png.flaticon.com/512/2356/2356780.png" />
-              <button data-action="click->board#updateColumn" class="p-2 text-base hover:bg-gray-100">
-                修改任務區塊
-              </button>
-            </div>
-            <div class="flex">
-              <img class="inline w-10 h-10 p-2" alt="Lax" src="https://cdn-icons-png.flaticon.com/512/2907/2907762.png" /> 
-              <%= link_to "刪除任務區塊",column,method: "delete",data: {confirm: "是否刪除本任務區塊"},:class=>"text-base text-red-500 hover:text-red-700 hover:bg-gray-100 p-2" %>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-col flex-1 p-3 overflow-auto rounded-lg gap-y-2 status_list card-list" data-column-id="<%= column.id%>"data-board-target="status_list">
-    
-             <button data-action="click->task#display_change" class="flex items-center justify-center flex-shrink-0 w-full font-medium transition-all rounded new_task text-ml h-7 text-icon hover:bg-hover hover:text-black">
-            <svg class="mr-2 fill-current" height="12" focusable="false" viewBox="0 0 24 24">
-              <path d="M10,10V4c0-1.1,0.9-2,2-2s2,0.9,2,2v6h6c1.1,0,2,0.9,2,2s-0.9,2-2,2h-6v6c0,1.1-0.9,2-2,2s-2-0.9-2-2v-6H4c-1.1,0-2-0.9-2-2s0.9-2,2-2H10z"></path>
-            </svg>
-            新增任務
-          </button>
-            <%= render "card", column: column, user: @user%>
-   
-       
-        </div>
-      </div>
-    <% end %>
-    <div class="flex order-first w-10/12 m-4 md:w-2/5 lg:w-44 md:order-last md:justify-center lg:justify-start">
-      <%= form_with model:[@project,@new_column] ,url:project_columns_path(@project) do |form| %>
-      <label class="p-2 text-xl font-semibold md:block create_column">+ 新增階段</label>
-      <%= form.text_field :status,:class=>"text-xl bg-white md:block rounded border border-gray lg:w-44" %> <% end %>
-    </div>
   </section>
-</div>
-
-
-
-<% if @project.errors.any? %>
-  <section  type="button" class="fixed top-0 left-0 flex items-center justify-center w-full h-full mx-auto bg-black bg-opacity-30">
-    <div class="w-1/3 h-3/5 p-2.5 rounded-3xl bg-white">
-      <div class="flex justify-end">
-        <span class="px-2 py-1 my-6 mr-6 text-2xl text-gray-400 bg-white rounded-lg hover:bg-gray-100">X</span>
-      </div>
-      <div class="flex flex-col justify-center align-center">
-        <img src="https://cdn-icons-png.flaticon.com/512/1828/1828843.png" class="w-20 h-20 m-auto">
-        <% @new_task.errors.full_messages.each do |message| %>
-          <span class="p-4 m-auto text-2xl font-semibold text-gray-900"><%= message %></span>
-        <% end %>
-      </div>
-  </section>
-<% end %>
-
-
-<% if notice %>
-  <section type="button" class="fixed top-0 left-0 flex items-center justify-center w-full h-full mx-auto bg-black bg-opacity-30">
-    <div class="relative w-1/3 bg-white h-1/3 rounded-3xl">
-      <span class="absolute px-2 py-1 my-6 mr-6 text-2xl text-gray-400 bg-white rounded-lg right-2 hover:bg-gray-300 hover:text-white">
-        <%= link_to "X", board_project_path(@project) %>
-      </span>
-      <div class="flex flex-col items-center justify-center pt-12 pb-8 align-center">
-        <img src="https://cdn-icons-png.flaticon.com/512/2804/2804579.png" class="w-20 h-20">
-        <span class="p-4 my-6 text-2xl font-semibold text-gray-900"><%= notice %></span>
-      </div>
-    </div>
-  </section>
-<% end %>
+</main>
